--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ add_executable(analysis src/analysis.c)
 target_link_libraries(analysis PUBLIC dyn_array)
 
 # Compile the the tester executable.
-add_executable(${PROJECT_NAME}_test test/tests.cpp)
+add_executable(${PROJECT_NAME}_test test/tests.cpp src/process_scheduling.c)
 
 target_compile_definitions(${PROJECT_NAME}_test PRIVATE)
 
